Update CORS configuration to allow additional origins and add health check endpoint